--- a/filter-studies/run_config.yaml
+++ b/filter-studies/run_config.yaml
@@ -60,10 +60,16 @@ particle_types:
       posLoc_x: 'ph2TpgPhiEmuAm_posLoc_x'
       dirLoc_phi: 'ph2TpgPhiEmuAm_dirLoc_phi'
     attributes:
-      BX:
-        expr: 'BX' # Correct to center BX at 0
+      # BX:
+      #   expr: 'BX - 20' # Correct to center BX at 0
       phires_conv:
         expr: '65536.0 / 0.5'
+      phi:
+        expr: phi / phires_conv + 3.14159 / 6 * (sc - 1)
+      phiB:
+        expr: phiB / phires_conv + 3.14159 / 6 * (sc - 1)
+      psi:
+        expr: phiB + phi
       matches: []
       matches_with_segment: False
     filter: 'p.quality >= 0'
@@ -105,7 +111,10 @@ ntuple_preprocessors:
       debug: False
   fw_shower_analyzer:
     src: "dtpr.utils.shower_functions.analyze_fwshowers"
-
+  filter_matching:
+    src: "filter_main.barrel_filter_analyzer"
+    kwargs:
+      only4true_showers: False
 # ================= available selectors - dtntuple ================= #
 # ntuple_selectors:
 #   baseline:
@@ -118,112 +127,33 @@ histo_sources:
   # - dtpr.utils.histograms.am_histos
   # - dtpr.utils.histograms.digi_histos
   # - dtpr.utils.histograms.shower_histos
-  - showers
+  - barrel_filter_histograms
 
 histo_names:
-  # Histogram to fill - Uncomment or add histograms as needed. 
-  # They should exist in any of the source modules
-  # # ============ efficiencies ============ #
-  # - shower_wiresd
-  # - shower_wiresd_ts
-  # - shower_wiresd_fs
-  # - shower_wiresdifs
-  # - shower_wiresdifs_ts
-  # - shower_wiresdifs_fs
-  # - shower_niqr
-  # - shower_niqr_ts
-  # - shower_niqr_fs
-  - tps_quality
-  - tps_quality_ts
-  - tps_quality_fs
-  # - seg_eff_MB1
-  # - seg_eff_MB2
-  # - seg_eff_MB3
-  # - seg_eff_MB4
-  # - fwshower_eff_MB1
-  # - fwshower_eff_MB2
-  # - fwshower_eff_MB3
-  # - fwshower_eff_MB4
-  # # ------ conf maps------
-  # - shower_tpfptnfn_MB1
-  # - shower_tpfptnfn_MB2
-  # - shower_tpfptnfn_MB3
-  # - shower_tpfptnfn_MB4
-  # - shower_tpfptnfn_g4
-  # # ============== rates =============== #
-  # - AM_rate_allBX_MB1
-  # - AM_rate_allBX_MB2
-  # - AM_rate_allBX_MB3
-  # - AM_rate_allBX_MB4
-  # - AM_rate_goodBX_MB1
-  # - AM_rate_goodBX_MB2
-  # - AM_rate_goodBX_MB3
-  # - AM_rate_goodBX_MB4
-  # - fwshower_rate_goodBX_MB1
-  # - fwshower_rate_goodBX_MB2
-  # - fwshower_rate_goodBX_MB3
-  # - fwshower_rate_goodBX_MB4
-  # - fwshower_rate_allBX_MB1
-  # - fwshower_rate_allBX_MB2
-  # - fwshower_rate_allBX_MB3
-  # - fwshower_rate_allBX_MB4
-  # # ============ leading_mu ============ #
-  # - LeadingMuon_pt
-  # - LeadingMuon_eta
-  # - LeadingMuon_maxDPhi
-  # - LeadingMuon_maxDEta
-  # # =========== subleading_mu ========== #
-  # - SubLeadingMuon_pt
-  # - SubLeadingMuon_eta
-  # - SubLeadingMuon_maxDPhi
-  # - SubLeadingMuon_maxDEta
-  # # ============= other_vars =========== #
-  # - shower_eff_muon_pt
-  # - shower_eff_muon_eta
-  # - muon_DR
-  # - nGenMuons
-  # - dphimax_seg_showering_muon
-  # - dphimax_seg_non_showering_muon
-  # - dphimax_tp_showering_muon
-  # - dphimax_tp_non_showering_muon
-  # - dphi_seg_showering_muon
-  # - dphi_seg_non_showering_muon
-  # - dphi_tp_showering_muon
-  # - dphi_tp_non_showering_muon
-  # # =========== digis =========== #
-  # - digi_w_gmts_MB1
-  # - digi_w_gmts_MB2
-  # - digi_w_gmts_MB3
-  # - digi_w_gmts_MB4
-  # - digi_w_gmtns_MB1
-  # - digi_w_gmtns_MB2
-  # - digi_w_gmtns_MB3
-  # - digi_w_gmtns_MB4
-  # - digi_wd_gmts_MB1
-  # - digi_wd_gmts_MB2
-  # - digi_wd_gmts_MB3
-  # - digi_wd_gmts_MB4
-  # - digi_wd_gmtns_MB1
-  # - digi_wd_gmtns_MB2
-  # - digi_wd_gmtns_MB3
-  # - digi_wd_gmtns_MB4
-  # - digi_wl_gmts_MB1
-  # - digi_wl_gmts_MB2
-  # - digi_wl_gmts_MB3
-  # - digi_wl_gmts_MB4
-  # - digi_wl3d_gmts_MB1
-  # - digi_wl3d_gmts_MB2
-  # - digi_wl3d_gmts_MB3
-  # - digi_wl3d_gmts_MB4
-  # - digi_wl_gmtns_MB1
-  # - digi_wl_gmtns_MB2
-  # - digi_wl_gmtns_MB3
-  # - digi_wl_gmtns_MB4
-  # - digi_wl3d_gmtns_MB1
-  # - digi_wl3d_gmtns_MB2
-  # - digi_wl3d_gmtns_MB3
-  # - digi_wl3d_gmtns_MB4
-
+  - tps_q<6_MB1
+  - tps_q<6_MB2
+  - tps_q<6_MB3
+  - tps_q<6_MB4
+  - tps_q>6_MB1
+  - tps_q>6_MB2
+  - tps_q>6_MB3
+  - tps_q>6_MB4
+  - showers_MB1
+  - showers_MB2
+  - showers_MB3
+  - showers_MB4
+  - showers_true_MB1
+  - showers_true_MB2
+  - showers_true_MB3
+  - showers_true_MB4
+  - tps_match_showers_MB1
+  - tps_match_showers_MB2
+  - tps_match_showers_MB3
+  - tps_match_showers_MB4
+  - matched_tps_MB1
+  - matched_tps_MB2
+  - matched_tps_MB3
+  - matched_tps_MB4
 # ----------------------------- configuration for event inspector ---------------------------------#
 inspector-functions:
   # define the functions to be used in the event inspector in the format:
