--- a/rates/run_config.yaml
+++ b/rates/run_config.yaml
@@ -1,13 +1,5 @@
 # -------------------------------- configuration for NTuples --------------------------------------#
-# ntuple_selectors:
-  # define the selectors to be used in the ntuple, always use at least no_filter
-  # comment/uncomment/add as needed...
-  # ================= available selectors - dtntuple ================= #
-  # - "dtpr.utils.filters.base_filters.baseline"
-  # - "dtpr.utils.filters.base_filters.removeShower"
-  # - "dtpr.utils.filters.base_filters.baseline_plus_hitsc"
-  # ================= available selectors - g4ntuple ================= #
-  # - ...
+ntuple_tree_name: '/dtNtupleProducer/DTTREE'
 
 ntuple_preprocessors:
   # define the event preprocessors to be used in the ntuple
@@ -34,100 +26,144 @@ ntuple_preprocessors:
 particle_types:
   digis:
     amount: 'digi_nDigis'
-    branches:
-      wh: 'digi_wheel'
-      sc: 'digi_sector'
-      st: 'digi_station'
-      sl: 'digi_superLayer'
-      w: 'digi_wire'
-      l: 'digi_layer'
-      time: 'digi_time'
     attributes:
+      wh: 
+        branch: 'digi_wheel'
+      sc: 
+        branch: 'digi_sector'
+      st: 
+        branch: 'digi_station'
+      sl: 
+        branch: 'digi_superLayer'
+      w: 
+        branch: 'digi_wire'
+      l: 
+        branch: 'digi_layer'
+      time: 
+        branch: 'digi_time'
       BX:
         expr: 'time // 25 if time is not None else None'
     sorter:
       by: 'p.BX'
   segments:
-    class: 'dtpr.particles.Segment'
     amount: 'seg_nSegments'
-    branches:
-      wh: 'seg_wheel'
-      sc: 'seg_sector'
-      st: 'seg_station'
-      phi: 'seg_posGlb_phi'
-      eta: 'seg_posGlb_eta'
-      nHits_phi: 'seg_phi_nHits'
-      nHits_z: 'seg_z_nHits'
-      t0_phi: 'seg_phi_t0'
-      pos_locx_sl1: 'seg_posLoc_x_SL1'
-      pos_locx_sl3: 'seg_posLoc_x_SL3'
+    attributes:
+      wh: 
+        branch: 'seg_wheel'
+      sc: 
+        branch: 'seg_sector'
+      st: 
+        branch: 'seg_station'
+      phi: 
+        branch: 'seg_posGlb_phi'
+      eta: 
+        branch: 'seg_posGlb_eta'
+      nHits_phi: 
+        branch: 'seg_phi_nHits'
+      nHits_z: 
+        branch: 'seg_z_nHits'
+      t0_phi: 
+        branch: 'seg_phi_t0'
+      pos_locx_sl1: 
+        branch: 'seg_posLoc_x_SL1'
+      pos_locx_sl3: 
+        branch: 'seg_posLoc_x_SL3'
+      matched_genmuons: []
+      matched_tps: []
   tps:  
     amount: 'ph2TpgPhiEmuAm_nTrigs'
-    branches:
-      wh: 'ph2TpgPhiEmuAm_wheel'
-      sc: 'ph2TpgPhiEmuAm_sector'
-      st: 'ph2TpgPhiEmuAm_station'
-      phi: 'ph2TpgPhiEmuAm_phi'
-      phiB: 'ph2TpgPhiEmuAm_phiB'
-      BX: 'ph2TpgPhiEmuAm_BX'
-      quality: 'ph2TpgPhiEmuAm_quality'
-      rpcFlag: 'ph2TpgPhiEmuAm_rpcFlag'
     attributes:
-      BX:
-        expr: 'BX - 20' # Correct to center BX at 0
+      wh: 
+        branch: 'ph2TpgPhiEmuAm_wheel'
+      sc: 
+        branch: 'ph2TpgPhiEmuAm_sector'
+      st: 
+        branch: 'ph2TpgPhiEmuAm_station'
+      phi: 
+        branch: 'ph2TpgPhiEmuAm_phi'
+      phiB: 
+        branch: 'ph2TpgPhiEmuAm_phiB'
+      quality: 
+        branch: 'ph2TpgPhiEmuAm_quality'
+      rpcFlag: 
+        branch: 'ph2TpgPhiEmuAm_rpcFlag'
+      _BX: # first get the BX from the branch
+        branch: 'ph2TpgPhiEmuAm_BX'
+      BX: # then re-define the BX attribute to center it at 0
+        expr: '_BX - 20'
       phires_conv:
         expr: '65536.0 / 0.5'
-      matches: []
-      matches_with_segment: False
+      matched_segments: []
+      matched_genmuons: []
+    filter: 'p.quality >= 0'
   genmuons:
-    class: 'dtpr.particles.GenMuon'
     amount: 'gen_nGenParts'
-    branches:
-      pt: 'gen_pt'
-      eta: 'gen_eta'
-      phi: 'gen_phi'
-      charge: 'gen_charge'
     attributes:
-      matches: []
-      matched_segments_stations: []
+      pt: 
+        branch: 'gen_pt'
+      eta: 
+        branch: 'gen_eta'
+      phi: 
+        branch: 'gen_phi'
+      charge: 
+        branch: 'gen_charge'
+      matched_segments: []
+      matched_tps: []
       showered: False
-    conditioner: 
-      property: 'gen_pdgId'
-      condition: "==13"
+    filter: 'abs(ev.gen_pdgId[p.index]) == 13'
     sorter:
-      by: 'pt'
+      by: 'p.pt'
       reverse: True
-  fwushowers:
+  fwshowers:
     amount: 'ph2Shower_station'
-    branches:
-      wh: 'ph2Shower_wheel'
-      sc : 'ph2Shower_sector'
-      st: 'ph2Shower_station'
-      sl: 'ph2Shower_superlayer'
-      nDigis: 'ph2Shower_ndigis'
-      BX: 'ph2Shower_BX'
-      min_wire: 'ph2Shower_min_wire'
-      max_wire: 'ph2Shower_max_wire'
-      avg_pos: 'ph2Shower_avg_pos'
-      avg_time: 'ph2Shower_avg_time'
-      wires_profile: 'ph2Shower_wires_profile'
+    attributes:
+      wh: 
+        branch: 'ph2Shower_wheel'
+      sc: 
+        branch: 'ph2Shower_sector'
+      st: 
+        branch: 'ph2Shower_station'
+      sl: 
+        branch: 'ph2Shower_superlayer'
+      nDigis: 
+        branch: 'ph2Shower_ndigis'
+      BX: 
+        branch: 'ph2Shower_BX'
+      min_wire: 
+        branch: 'ph2Shower_min_wire'
+      max_wire: 
+        branch: 'ph2Shower_max_wire'
+      avg_pos: 
+        branch: 'ph2Shower_avg_pos'
+      avg_time: 
+        branch: 'ph2Shower_avg_time'
+      wires_profile: 
+        branch: 'ph2Shower_wires_profile'
   simhits:
     amount: 'simHit_nSimHits'
-    branches:
-      wh: 'simHit_wheel'
-      sc: 'simHit_sector'
-      st: 'simHit_station'
-      sl: 'simHit_superLayer'
-      l: 'simHit_layer'
-      w: 'simHit_wire'
-      process_type: 'simHit_processType'
-      particle_type: 'simHit_particleType'
+    attributes:
+      wh: 
+        branch: 'simHit_wheel'
+      sc: 
+        branch: 'simHit_sector'
+      st: 
+        branch: 'simHit_station'
+      sl: 
+        branch: 'simHit_superLayer'
+      l: 
+        branch: 'simHit_layer'
+      w: 
+        branch: 'simHit_wire'
+      process_type: 
+        branch: 'simHit_processType'
+      particle_type: 
+        branch: 'simHit_particleType'
 
 # -------------------------------- configuration for histograms -----------------------------------#
 histo_sources:
   # define the source modules of the histograms
   - dtpr.utils.histograms.am_histos
-  - dtpr.utils.histograms.shower_histos
+  - shower_rates_histos
 
 histo_names:
   # Histogram to fill - Uncomment or add histograms as needed. 
@@ -148,6 +184,7 @@ histo_names:
   - fwshower_rate_allBX_MB2
   - fwshower_rate_allBX_MB3
   - fwshower_rate_allBX_MB4
+
 # ------------------------------- configuration for dt plots  -------------------------------------#
 dt_plots_configs:
   mplhep-style: 'CMS'         # Style to use for the plots
