--- a/filter-studies/run_config.yaml
+++ b/filter-studies/run_config.yaml
@@ -150,15 +150,15 @@ ntuple_tree_name: '/dtNtupleProducer/DTTREE'
 ntuple_preprocessors:
   genmuon_matcher:
     src: "dtpr.utils.genmuon_functions.analyze_genmuon_matches"
-  genmuon_showerer:
-    src: "dtpr.utils.genmuon_functions.analyze_genmuon_showers"
-    kwargs:
-      method: 2
   real_shower_builder:
     src: "dtpr.utils.shower_functions.build_real_showers"
     kwargs:
       threshold: 8
       debug: False
+  genmuon_showerer:
+    src: "dtpr.utils.genmuon_functions.analyze_genmuon_showers"
+    kwargs:
+      method: 3 # 1: using offline segments, 2: using simhits, 3: using real showers
   fw_shower_analyzer:
     src: "dtpr.utils.shower_functions.analyze_fwshowers"
   filter_matching:
@@ -179,7 +179,6 @@ histo_sources:
   - barrel_filter_histograms
 
 histo_names:
-  - showered_genmuon_pt_eff
   - shower_showeredgenmuon_tag_eff_pttrend
   - shower_matchAmTP_eff_MB1
   - shower_matchAmTP_eff_MB2
